--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="admin__banner--btn">
         <span>
           <a href="index.html">
-            <img src="assets/img/Estate management icon.svg" class="admin--icon" height="32px" alt="">
+            <img src="assets/img/home icon.svg" class="admin--icon" height="32px" alt="">
           </a>
         </span>
         <ul class="admin__nav">
@@ -101,7 +101,7 @@
       </div>
       <div class="row cards__row bill__card-position text-align--center">
         <div class="col text-align--right">
-          <div class="cards__cards--image-pay">
+          <div class="cards__cards--image-pay bd">
             <img src="assets/img/bank.svg" height="56px" width="56px" alt="">
           </div>
           <button type="button" class="btn btn--upload" data-toggle="modal" data-target="#exampleModal3">
@@ -145,7 +145,7 @@ Step 3: And wait for confirmation
         <div class="col">
         </div>
         <div class="col text-align--left">
-          <div class="cards__cards--image-pay">
+          <div class="cards__cards--image-pay mt">
             <img src="assets/img/money-transfer icon.svg" height="56px" width="56px" alt="">
           </div>
           <!-- Button trigger modal -->
@@ -261,7 +261,7 @@ Step 3: And wait for confirmation
         </div>
         <div class="col-12 col-sm-3 col-md-12">
           <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Apartment/House No" name="ames" required>
+            <input type="text" class="form-control" id="exampleInputPassword1" aria-describedby="emailHelp" placeholder="Apartment/House No" name="ames" required>
           </div>
         </div>
         <div class="col-12 col-sm-12 col-md-12">
